@@ -62,6 +62,9 @@ namespace Tagger {
   using namespace Hash;
   using namespace Timbl;
 
+  string Version() { return VERSION; };
+  string VersionName() { return PACKAGE_STRING; };
+
   const string UNKSTR   = "UNKNOWN";
   
   class BeamData;
